--- a/style.css
+++ b/style.css
@@ -5,26 +5,24 @@
 	color: #FFF;
 	height: 100px;
 	width: 40%;
-	left: 20%;
+	left: 10%;
 }
 
 
-#tweetslist {
+#tweetsList {
 	position: absolute;
 	padding: 0;
-	background-color: rgba(52, 152, 219, 0.2);
 	color: #FFF;
 	overflow-y: scroll;
-	height:200px;
-	width:40%;
-	left: 20%;
+	width:100%;
+	height:700%;
 }
 
 #map {
 	position: absolute;
 	top: 50px;
 	bottom: 0;
-	width: 75%;
+	width: 60%;
 }
 
 button.btn-default:focus {
